<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="obj"
            type="ir.khosravi.countdownview.model.TimeModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/text_title"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/GeneralTextAppearance"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@id/donutProgressSeconds"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <ir.khosravi.countdownview.widget.DonutProgress
            android:id="@+id/donutProgressDays"
            style="@style/DonutProgress"
            app:donut_max="1"
            app:progress="@{obj}"
            app:donut_suffix_text="@string/day"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/donutProgressHours"
            app:layout_constraintTop_toTopOf="@id/donutProgressSeconds" />

        <ir.khosravi.countdownview.widget.DonutProgress
            android:id="@+id/donutProgressHours"
            style="@style/DonutProgress"
            app:donut_max="24"
            app:progress="@{obj}"
            app:donut_suffix_text="@string/hour"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toRightOf="@id/donutProgressDays"
            app:layout_constraintRight_toLeftOf="@id/donutProgressMinutes"
            app:layout_constraintTop_toTopOf="@id/donutProgressSeconds" />

        <ir.khosravi.countdownview.widget.DonutProgress
            android:id="@+id/donutProgressMinutes"
            style="@style/DonutProgress"
            app:donut_suffix_text="@string/minute"
            app:progress="@{obj}"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toRightOf="@id/donutProgressHours"
            app:layout_constraintRight_toLeftOf="@id/donutProgressSeconds"
            app:layout_constraintTop_toTopOf="@id/donutProgressSeconds" />

        <ir.khosravi.countdownview.widget.DonutProgress
            android:id="@+id/donutProgressSeconds"
            style="@style/DonutProgress"
            app:donut_suffix_text="@string/second"
            app:progress="@{obj}"
            android:layout_marginTop="@dimen/spacing_tiny"
            app:layout_constraintBottom_toTopOf="@id/text_message"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toRightOf="@id/donutProgressMinutes"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_start"
            app:layout_constraintVertical_chainStyle="packed" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/text_message"
            android:textAppearance="@style/GeneralTextAppearance"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:textSize="14dp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/donutProgressSeconds"
            app:layout_constraintVertical_chainStyle="packed" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_height="36dp"
            android:layout_width="wrap_content"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            style="@style/AppTextButtonStyle"
            android:paddingLeft="@dimen/spacing_xlarge"
            android:paddingRight="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:textColor="@android:color/white"
            app:icon="@drawable/icons_live_outline_button"
            app:iconGravity="textEnd"
            app:layout_constraintTop_toBottomOf="@id/text_message"
            android:text="@string/button_buy_subscription"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/app_button_green_bg"
            app:backgroundTint="@color/appGreen"
            app:layout_constraintRight_toRightOf="parent"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>